tests/error/remainderInteger-wrong-1st-argument-bool.uplc
(program 1.0.0[[(builtin remainderInteger)(con bool True)](con integer 10)])